# docs/swagger.json
@@ -42,22 +42,7 @@
                         }
                     }
                 ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
+                "responses": {}
             }
         },
         "/auth/registration": {
@@ -90,6 +75,91 @@
                         }
                     }
                 ],
+                "responses": {}
+            }
+        },
+        "/createMarket": {
+            "post": {
+                "description": "Данный запрос позволяет создать магазин, если формат данных соответствует структуре models.Market",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "markets"
+                ],
+                "summary": "Создание магазина",
+                "parameters": [
+                    {
+                        "description": "Market data",
+                        "name": "market",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Market"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/createProduct": {
+            "post": {
+                "description": "Данный запрос позволяет создать продукт, если формат данных соответствует структуре models.Product",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "products"
+                ],
+                "summary": "Создание продукта",
+                "parameters": [
+                    {
+                        "description": "Product data",
+                        "name": "market",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Product"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/markets": {
+            "get": {
+                "description": "Данный запрос позволяет получить список всех магазинов, их данных и товаров внутри них",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "markets"
+                ],
+                "summary": "Все магазины",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -115,9 +185,9 @@
                 }
             }
         },
-        "/products/{market_id}": {
+        "/products": {
             "get": {
-                "description": "Получить список продуктов по marketID",
+                "description": "Данный запрос позволяет получить список всех продуктов и данных о них",
                 "consumes": [
                     "application/json"
                 ],
@@ -125,9 +195,26 @@
                     "application/json"
                 ],
                 "tags": [
-                    "product"
+                    "products"
                 ],
-                "summary": "Продукты по ID",
+                "summary": "Все продукты",
+                "responses": {}
+            }
+        },
+        "/products/{market_id}": {
+            "get": {
+                "description": "Данный запрос позволяет получить список товаров магазина по id магазина",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "products",
+                    "markets"
+                ],
+                "summary": "Продукты по marketID",
                 "parameters": [
                     {
                         "type": "integer",
@@ -137,29 +224,23 @@
                         "required": true
                     }
                 ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
+                "responses": {}
+            }
+        },
+        "/users": {
+            "get": {
+                "description": "Данный запрос позволяет получить список всех пользователей и их данных",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Все пользователи",
+                "responses": {}
             }
         }
     },
@@ -193,6 +274,12 @@
                     "type": "string"
                 }
             }
+        },
+        "models.Market": {
+            "type": "object"
+        },
+        "models.Product": {
+            "type": "object"
         }
     },
     "securityDefinitions": {
